5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1760_674.log
== TEST (2019-05-22 11:25:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor

# Último elemento do vetor

# Maior elemento do vetor

# Soma dos elementos do vetor

# Média aritmética dos elementos do vetor

# conta ate duas casas decimais 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:27:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor

# Maior elemento do vetor

# Soma dos elementos do vetor

# Média aritmética dos elementos do vetor

# conta ate duas casas decimais 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:35:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:35:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- EXECUTION TIME:
0.357903
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
937
187.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:36:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:36:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- EXECUTION TIME:
0.378833
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
937
187.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:36:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:38:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- EXECUTION TIME:
0.433016
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
187.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:39:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:40:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(int(input("vetores: "))))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- EXECUTION TIME:
0.47124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/674/main.py", line 4, in <module>
    vetor = array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:40:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(int(input("vetores: "))))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- EXECUTION TIME:
0.476255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/674/main.py", line 4, in <module>
    vetor = array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:40:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(int(input("vetores: "))))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:41:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)
print(round(media / 5 ,2))
# conta ate duas casas decimais

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:44:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
print(round(sum(vetor)/size(vetor))
-- EXECUTION TIME:
0.184253
-- ERROR:
  File "/home/codebench/codes/1760/674/main.py", line 19
    
                                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:44:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
print(round(sum(vetor)/size(vetor),2)
-- EXECUTION TIME:
0.135761
-- ERROR:
  File "/home/codebench/codes/1760/674/main.py", line 19
    
                                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:45:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
print(round(sum(vetor)/size(vetor),2)
-- ERROR:
File "XXXX", line 19
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:46:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)/size(vetor)
print(round(media,2)
-- ERROR:
File "XXXX", line 20
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:46:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)/size(vetor)
print(round(media,2)
		
-- ERROR:
File "XXXX", line 21
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:47:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)/size(vetor)
print(round(media,2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 11:47:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
# Use o navegador Chrome, para copiar/colar a entrada de exemplo # NÃO ENTENDI PRA QUE USAR O CROMER
vetor = array(eval(input("vetores: ")))
# Quantidade de elementos do vetor
print(size(vetor))
# Primeiro elemento do vetor
print(vetor[0])
# Último elemento do vetor
print(vetor[4])
# Maior elemento do vetor
print(max(vetor))
# menor elemento do vetor
print(min(vetor))
# Soma dos elementos do vetor
print(sum(vetor))
# Média aritmética dos elementos do vetor
media = sum(vetor)/size(vetor)
print(round(media,2))
		
-- EXECUTION TIME:
0.439113
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
